# cosmic-ext-applet-systemstats

./: .gitattributes  .gitignore  Cargo.toml  README.md  justfile
debian/: changelog  control  rules
flatpak/: io.github.rylan_x.cosmic-applet-systemstats.yml  io.github.rylan_x.cosmic-ext-applet-systemstats.flathub.yml  io.github.rylan_x.cosmic-ext-applet-systemstats.yml
res/: com.github.rylan-x.systemstats.desktop  io.github.rylan_x.cosmic-applet-systemstats.desktop  io.github.rylan_x.cosmic-applet-systemstats.metainfo.xml  io.github.rylan_x.cosmic-ext-applet-systemstats.desktop  io.github.rylan_x.cosmic-ext-applet-systemstats.metainfo.xml
src/: app.rs  formatting.rs  main.rs
src/monitors/: cpu.rs  gpu.rs  memory.rs  mod.rs  network.rs  temperature.rs
