[package]
name = "cosmic-applet-systemstats"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
sysinfo = "0.37"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland"]

[profile.release]
lto = "thin"
strip = true
