[package]
name = "cosmic-applet-systemstats"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
log = "0.4"
systemd-journal-logger = "2.2"
fern = "0.7"
sysinfo = "0.37"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland"]

[profile.release]
lto = "thin"
strip = true
